--- a/style.css
+++ b/style.css
@@ -76,6 +76,21 @@ header .fa-solid {
 }
 
 /*-------------------
+    MAIN
+-------------------*/
+/* DEMO */
+.demo .column {
+    width: calc(100% / 3);
+    margin-bottom: 22px;
+}
+.demo .column-grow {
+    flex-grow: 1;
+}
+.card {
+    background-color: #b5ddff;
+    border-radius: 20px;
+}
+/*-------------------
     MEDIA QUEARY
 -------------------*/
 @media screen and (max-width: 992px) {
@@ -85,5 +100,10 @@ header .fa-solid {
     }
     .header-nav {
         display: none;
+    }
+}
+@media screen and (max-width: 768px) {
+    .demo .column {
+        width: 100%;
     }
 }
