--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ header .fa-solid {
     MAIN
 -------------------*/
 /* DEMO */
+.demo {
+    margin-top: 22px;
+}
 .demo .column {
     width: calc(100% / 3);
     margin-bottom: 22px;
@@ -89,6 +92,7 @@ header .fa-solid {
 .card {
     background-color: #b5ddff;
     border-radius: 20px;
+    height: 100%;
 }
 /*-------------------
     MEDIA QUEARY
