--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ body {
     margin: 0 auto;
     padding: 0 20px;
 }
+.container-small {
+    max-width: 910px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -129,6 +134,17 @@ header .fa-solid {
 }
 .demo .card .fa-solid {
     color: #0084fd;
+}
+
+/* STRATEGY */
+.strategy {
+    background-color: #9792e4;
+}
+.strategy .column {
+    width: 50%;
+}
+.strategy img {
+    width: 100%;
 }
 /*-------------------
     MEDIA QUEARY
