--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     padding: 4px;
     border: none;
     border-radius: 20px;
+    font-style: inherit;
 }
 .btn-white {
     background-color: #fff;
@@ -212,6 +213,39 @@ header .fa-solid {
     margin-left: 16px;
     margin-right: 16px;
 }
+
+/* BENEFITS */
+.benefits {
+    background-color: #9792e4;
+}
+.benefits h1 {
+    color: #9792e4;
+    font-size: 60px;
+}
+.benefits h2 {
+    text-align: center;
+    padding: 36px 0;
+    color: #fff;
+}
+.benefits h4 {
+    font-size: 20px;
+    color: #9792e4;
+}
+.benefits p {
+    padding: 36px 0;
+}
+.benefits .btn-purple {
+    color: #fff;
+    padding: 4px 30px;
+    margin-bottom: 18px;
+}
+.benefits .column {
+    width: calc(100% / 3);
+    margin-bottom: 22px;
+}
+.benefits .card {
+    padding: 16px;
+}
 /*-------------------
     MEDIA QUEARY
 -------------------*/
@@ -222,6 +256,9 @@ header .fa-solid {
     }
     .header-nav {
         display: none;
+    }
+    .benefits .column {
+        width: 50%;
     }
 }
 @media screen and (max-width: 768px) {
@@ -236,5 +273,8 @@ header .fa-solid {
     }
     .testimonials .column img {
         width: 30%;
+    }
+    .benefits .column {
+        width: 100%;
     }
 }
