feat: added benefits section

--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ header .fa-solid {
     text-align: center;
     padding: 36px 0;
     color: #fff;
+    font-size: 40px;
 }
 .benefits h4 {
     font-size: 20px;
