--- a/style.css
+++ b/style.css
@@ -247,6 +247,38 @@ header .fa-solid {
 .benefits .card {
     padding: 16px;
 }
+
+/* ABOUT */
+.about .container {
+    margin-bottom: 20px;
+}
+.about h1 {
+    font-size: 40px;
+    padding: 36px 0;
+    color: #9792e4;
+}
+.about p {
+    margin: 22px 0;
+    line-height: 2.5;
+}
+.about img {
+    width: 100%;
+    border-radius: 50%;
+}
+.about .column-img h4 {
+    font-size: 22px;
+    color: #9792e4;
+}
+.about button {
+    color: #fff;
+    width: 80%;
+}
+
+/* START */
+.start {
+    background-color: #9792e4;
+    color: #fff;
+}
 /*-------------------
     MEDIA QUEARY
 -------------------*/
@@ -277,5 +309,11 @@ header .fa-solid {
     }
     .benefits .column {
         width: 100%;
+    }
+    .about .column {
+        width: 100%;
+    }
+    .about .column img {
+        width: 50%;
     }
 }
