feat: add start

--- a/style.css
+++ b/style.css
@@ -278,6 +278,7 @@ header .fa-solid {
 .start {
     background-color: #9792e4;
     color: #fff;
+    text-align: center;
 }
 /*-------------------
     MEDIA QUEARY
