--- a/style.css
+++ b/style.css
@@ -279,6 +279,41 @@ header .fa-solid {
     background-color: #9792e4;
     color: #fff;
     text-align: center;
+    padding: 40px 0;
+}
+.start h4 {
+    color: #fff5;
+}
+.start h2 {
+    margin: 32px 0;
+    font-size: 32px;
+}
+.start h1 {
+    color: #fdc15f;
+    font-size: 60px;
+    margin: 30px 0;
+}
+.start button {
+    padding: 16px 40px;
+    border-radius: 40px;
+    margin: 20px 0;
+    color: #9792e4;
+}
+.start a {
+    color: #fff;
+}
+.start .fa-circle {
+    font-size: 6px;
+    align-self: center;
+}
+
+/*-------------------
+    FOOTER
+-------------------*/
+footer {
+    background-color: #333333;
+    color: #fff;
+    text-align: center;
 }
 /*-------------------
     MEDIA QUEARY
